--- a/OnlineStore/shop/templates/navbar.html
+++ b/OnlineStore/shop/templates/navbar.html
@@ -17,6 +17,23 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{%  url 'about' %}">About Us</a>
                 </li>
+
+                {% if user.is_authenticated %}
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{%  url 'logout' %}">Logout</a>
+                </li>
+
+                {% else  %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{%  url 'login' %}">Login</a>
+                </li>
+                {% endif %}
+
+
+
+
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button"
                        data-bs-toggle="dropdown">
