--- a/OnlineStore/shop/templates/navbar.html
+++ b/OnlineStore/shop/templates/navbar.html
@@ -28,6 +28,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{%  url 'login' %}">Login</a>
                 </li>
+                    <li class="nav-item"> <a class="nav-link" href="{%  url 'signup' %}">Signup</a></li>
+
                 {% endif %}
 
 
