--- a/OnlineStore/shop/templates/index.html
+++ b/OnlineStore/shop/templates/index.html
@@ -50,7 +50,7 @@
                     <!-- Product actions -->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center">
-                            <a class="btn btn-outline-dark mt-auto" href="#">
+                            <a class="btn btn-outline-dark mt-auto" href="{% url 'product' item.id %}">
                                 View Product
                             </a>
                         </div>
@@ -87,7 +87,7 @@
                     <!-- Product actions -->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center">
-                            <a class="btn btn-outline-dark mt-auto" href="#">
+                            <a class="btn btn-outline-dark mt-auto" href="{% url 'product' item.id %}">
                                 View Product
                             </a>
                         </div>
