--- a/OnlineStore/shop/templates/navbar.html
+++ b/OnlineStore/shop/templates/navbar.html
@@ -37,15 +37,15 @@
 
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button"
+                    <a class="nav-link dropdown-toggle" href="{% url 'home' %}" role="button"
                        data-bs-toggle="dropdown">
                         Shop
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">All Products</a></li>
+                        <li><a class="dropdown-item" href="{% url 'home' %}">All Products</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Popular Items</a></li>
-                        <li><a class="dropdown-item" href="#">New Arrivals</a></li>
+                        <li><a class="dropdown-item" href="{% url 'category' 'mobile' %}">Mobiles</a></li>
+                        <li><a class="dropdown-item" href="{% url 'category' 'laptop' %}">Laptop</a></li>
                     </ul>
                 </li>
             </ul>
