--- a/OnlineStore/shop/templates/navbar.html
+++ b/OnlineStore/shop/templates/navbar.html
@@ -1,9 +1,7 @@
-
-
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="{%  url 'home' %}">Online Store</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Online Store</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
@@ -12,23 +10,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item">
-                    <a class="nav-link active" href="{%  url 'home' %}">Home</a>
+                    <a class="nav-link active" href="{% url 'home' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{%  url 'about' %}">About Us</a>
+                    <a class="nav-link" href="{% url 'about' %}">About Us</a>
                 </li>
 
                 {% if user.is_authenticated %}
 
-                <li class="nav-item">
-                    <a class="nav-link" href="{%  url 'logout' %}">Logout</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                    </li>
 
-                {% else  %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{%  url 'login' %}">Login</a>
-                </li>
-                    <li class="nav-item"> <a class="nav-link" href="{%  url 'signup' %}">Signup</a></li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Signup</a></li>
 
                 {% endif %}
 
@@ -43,7 +41,9 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="{% url 'home' %}">All Products</a></li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item" href="{% url 'category' 'mobile' %}">Mobiles</a></li>
                         <li><a class="dropdown-item" href="{% url 'category' 'laptop' %}">Laptop</a></li>
                     </ul>
@@ -51,11 +51,10 @@
             </ul>
 
             <form class="d-flex">
-                <button class="btn btn-outline-dark" type="button">
-                    <i class="bi bi-cart-fill me-1"></i>
-                    Cart
-                    <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                </button>
+                <a href={% url 'cart_summary' %} class ='btn btn-outline-dark' >
+                <i class="bi bi-cart-fill me-1"></i>
+                Shopping cart
+                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span></a>
             </form>
         </div>
     </div>
