add product to session

--- a/OnlineStore/shop/templates/product.html
+++ b/OnlineStore/shop/templates/product.html
@@ -22,12 +22,37 @@
 
 
           {% endif %}
-            <a href="{% url 'home' %}">Return Main Page</a>
+            <br> <br>
+            <button class="btn btn-secondary" type="button" value="{{product.id}}" id="add-cart">Add To Basket</button>
+
+            <a href="{% url 'home' %}" class="btn btn-secondary">Return Main Page</a>
       </div>
     </div>
   </div>
 </div>
 
+    <script>
+    $(document).on('click', '#add-cart', function (e){
+        e.preventDefault();
+        $.ajax(
+            {
+                type : 'POST',
+                url : '{% url 'cart_add' %}',
+                data : {
+                    product_id : $('#add-cart').val(),
+                    csrfmiddlewaretoken: '{{csrf_token}}',
+                    action: 'post'
+                },
+                success : function (json){
+                    console.log(json)
+                },
+                error : function (xhr, errmsg, err) {
+
+                }
+            }
+        )
+    })
+    </script>
 {% endblock %}
     <br><br>
     <br><br>
