--- a/OnlineStore/shop/templates/base.html
+++ b/OnlineStore/shop/templates/base.html
@@ -19,6 +19,8 @@
 
     <!-- Theme CSS -->
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
