--- a/OnlineStore/shop/templates/navbar.html
+++ b/OnlineStore/shop/templates/navbar.html
@@ -54,7 +54,7 @@
                 <a href={% url 'cart_summary' %} class ='btn btn-outline-dark' >
                 <i class="bi bi-cart-fill me-1"></i>
                 Shopping cart
-                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span></a>
+                <span class="badge bg-dark text-white ms-1 rounded-pill" id="cart_quantity">{{ cart|length }}</span></a>
             </form>
         </div>
     </div>
