Total Price in Shopping Basket

--- a/OnlineStore/cart/templates/cart_summary.html
+++ b/OnlineStore/cart/templates/cart_summary.html
@@ -91,6 +91,7 @@
                 </div>
 
             {% endfor %}
+           <center> <h3>Total Price for Your Basket: {{ total }} $</h3></center>
         {% else %}
             <p class="text-center">
                 Your Basket is Empty
