Category page is created

--- a/OnlineStore/shop/templates/navbar.html
+++ b/OnlineStore/shop/templates/navbar.html
@@ -40,7 +40,7 @@
                         Shop
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url 'home' %}">All Products</a></li>
+                        <li><a class="dropdown-item" href="{% url 'category_summary' %}">Categories</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
