--- a/OnlineStore/shop/templates/navbar.html
+++ b/OnlineStore/shop/templates/navbar.html
@@ -22,6 +22,10 @@
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                     </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'update_user' %}"> Profile</a>
+                    </li>
+
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'login' %}">Login</a>
