Edit Passwordwas added

--- a/OnlineStore/shop/templates/update_user.html
+++ b/OnlineStore/shop/templates/update_user.html
@@ -25,6 +25,8 @@
 
                     <button type="submit" class="btn btn-secondary">Edit</button>
                 </form>
+                <br>
+                <a href="{% url 'update_password' %}" class="btn btn-warning">Edit Password</a>
             </center>
         </div>
     </div>
